Added V2EX Workspace link.

--- a/_posts/essays/2012-4-25-v2ex-2to3.md
+++ b/_posts/essays/2012-4-25-v2ex-2to3.md
@@ -70,7 +70,7 @@ Olivia 在怀着我们孩子的这 10 个月期间，和我一起做了一件很
 
 但是这一年间的故事实在是太过于复杂，我打算只回忆其中和 V2EX 有关的部分。
 
-我在 2011 年 2 月的时候，开始构思 V2EX Workspace。构想中的 Workspace 是一款既能自用也可以服务于小团队的信息分享和整理工具。我在大概 8 张 A4 纸上画出了 Workspace 的原型，并且最终在 2011 年 10 月 10 日的时候上线了 V2EX Workspace。
+我在 2011 年 2 月的时候，开始构思 V2EX Workspace。构想中的 Workspace 是一款既能自用也可以服务于小团队的信息分享和整理工具。我在大概 8 张 A4 纸上画出了 Workspace 的原型，并且最终在 2011 年 10 月 10 日的时候上线了 [V2EX Workspace](https://workspace.v2ex.com/)。
 
 于是到了 2011 年末时，V2EX 相比最初的那个只能用 iPhone 访问的简单网站，已经变成了一个每天有 5000 独立访客，50000 以上 PV，同时带有工具属性的，创意工作者社区。
 
