Add a screenshot for Project Toruk

--- a/_posts/essays/2012-4-25-v2ex-2to3.md
+++ b/_posts/essays/2012-4-25-v2ex-2to3.md
@@ -9,6 +9,8 @@ tags: V2EX
 
 两年前的这个时候，我在昆明，正在做一个对当时的自己来说，非常有挑战的项目——iPad 上的 Twitter 客户端。那个项目的代号叫 Toruk，这个名字来源于电影 Avatar，也就是里面那只最大的鸟的名字。那个时候的自己对于 iOS 开发的经验还只能算是刚刚开始，所以那个项目的进展并不是特别顺利。那段时间 Twitter 本身也刚刚将验证方式彻底切换到 OAuth，虽然那时我已经申请到了 xAuth 特权，但是还并没有完全弄明白整个过程。
 
+![](/images/project-toruk.png)
+
 4 月的某一天，发生了一件让整个 Twitter 生态圈震惊的事情，那就是，Tweetie，这个最优秀的第三方客户端，被 Twitter 收购了，并且变成了一款免费软件。大家都为 @lorenb 感到高兴，可是却也需要重新思考自己正在进行中的项目。
 
 那时，我的结论是：
